# CS2SmokesTelegram

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: stage_deploy.yml
infra/: common-services.yml  default.conf  docker-compose.local.yml
src/api/: Dockerfile
src/api/api/: crud.py  settings.py  urls.py
src/api/lineups/: admin.py  api.py  constants.py  models.py  schemas.py
src/api/lineups/migrations/: 0001_initial.py  0002_lineup_pub_date_alter_lineup_author_and_more.py
src/api/telegram_users/: admin.py  api.py  crud.py  models.py  schemas.py
src/api/telegram_users/migrations/: 0001_initial.py
src/bot/: Dockerfile  aiogram_run.py  config.py  create_bot.py  logger.py
src/bot/handlers/: __init__.py  lineups.py  start.py
src/bot/services/: __init__.py  internal_requests.py
